加速代理设置分片大小 (#796)