@@ -5,6 +5,7 @@ import cn.har01d.alist_tvbox.util.Constants;
 import lombok.Data;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -26,7 +27,7 @@ public class AppProperties {
     private int maxSearchResult = 60;
     private String secretKey;
     private List<String> qns = List.of();
-    private List<String> tgDrivers = List.of("9", "10", "5", "7", "8", "3", "2", "0", "6", "1");
+    private List<String> tgDrivers = Arrays.asList(Constants.TG_DRIVERS.split(","));
     private String userAgent = Constants.USER_AGENT;
     private String tgChannels = Constants.TG_CHANNELS;
     private String tgWebChannels = Constants.TG_WEB_CHANNELS;
